[package]
name = "multihash"
description = "Implementation of the multihash format"
repository = "https://github.com/multiformats/rust-multihash"

keywords = ["multihash", "ipfs"]

version = "0.7.1-pre"

authors = ["dignifiedquire <dignifiedquire@gmail.com>"]

license = "MIT"

readme = "README.md"

documentation = "https://docs.rs/multihash/"

[dependencies]
tiny-keccak = { version = "1.2", optional = true }
ring = { version = "0.12", optional = true }

[features]
default = []
encode = ["tiny-keccak", "ring"]
